--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Page Title</title>
-  <script src="game.js"></script>
+  <script src="game.js" defer></script>
 </head>
 <body>
+  <ul>
+    <li><button id="Rock"> Rock </button></li>
+    <li><button id="Paper"> Paper </button></li>
+    <li><button id="Scissor"> Scissor </button></li>
+  </ul>
+  <h1>
+  </h1>
 </body>
 </html>
