--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Page Title</title>
   <script src="game.js" defer></script>
+  <link rel="stylesheet" src="styles.css">
 </head>
 <body>
   <ul>
